# GSoC-PAL-Demo

./: README.md
dummy_sensor/: CMakeLists.txt  package.xml
dummy_sensor/include/dummy_sensor/: dummy_sensor.hpp
dummy_sensor/scripts/: wait_for_message.py
dummy_sensor/src/: dummy_sensor.cpp
fws_robot_description/gazebo/: fws_robot.gazebo.xacro
fws_robot_description/robots/: fws_robot.urdf.xacro
fws_robot_sim/launch/: turtlebot_robot_spawn.launch.py
fws_robot_sim/worlds/: fws_robot_world.sdf
